--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,19 +2,19 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: shipping-service-XX
-  name: shipping-service-XX
+    app: shipping-service-15
+  name: shipping-service-15
   namespace: lab-cnb
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: shipping-service-XX
+        app: shipping-service-15
     spec:
       containers:
-      - image: uk.icr.io/lab-cnb/shipping-service-XX:v1.0.1
-        name: shipping-service-XX
+      - image: uk.icr.io/lab-cnb/shipping-service-15:v1.0.1
+        name: shipping-service-15
         ports:
         - name: app-port
           containerPort: 3001
