--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,16 +1,16 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: shipping-service-ingress-XX
+  name: shipping-service-ingress-15
   namespace: lab-cnb
   labels:
-    app: shipping-service-XX  
+    app: shipping-service-15  
 spec:
   rules:
-  - host: shipping-service-XX.cnb-iks.eu-gb.containers.appdomain.cloud
+  - host: shipping-service-15.cnb-iks.eu-gb.containers.appdomain.cloud
     http:
       paths:
       - path: /
         backend:
-          serviceName: shipping-service-svc-XX
+          serviceName: shipping-service-svc-15
           servicePort: app-port
